--- a/doc/main.tex
+++ b/doc/main.tex
@@ -173,7 +173,7 @@ Machine learning is a growing field that can help process the increase of availa
 	\includegraphics[
 	width=0.65\textwidth
 	]{images/FlowChartML.png}
-	\caption{FlowChart with the different machine learning algorithms in the sklearn library \ref{{scikit-learn}}}
+	\caption{FlowChart with the different machine learning algorithms in the sklearn library \ref{scikit-learn}}
 	\label{fig:FlowChart}
 \end{figure}
 %explain the need for automation and then the boost of information, I try to give.
@@ -348,11 +348,12 @@ In this section definitions and abbreviations are explained and set in context. 
 
 \newpage
 \section{Experimental setup} \label{Chapter3}
-Different parts of the research different datasets are chosen. Most results are shown as an average result of the datasets involved. The chosen datasets can have a large impact on shown results. 
+The different experiments use different datasets. The datasets used for some experiments need some prerequiste on the dataset to be used in the experiment. The chosen datasets can have a large impact on shown results.
+The results are mostly shown as an average result of the datasets involved. This can average out outliers but can also give a false sense of the reality as other patterns can exist in the dataset.
 
 
 \subsection{Datasets} \label{description}
-Depending on the property we are going to study we need different datasets or can make assumption. Classification features are not an optimal input for a nearest neighbor classifier as the distant between converted numbers does not tell much about the relation between the features. Multiple target classes datasets are inconvenient for the bias-variance calculation, so we focus on 2 class target datasets, which there are plenty enough on Openml. 
+Depending on the property that an experiment focuses on different datasets are chosen or datasets are split on a property. Categorical features are not an optimal input for a nearest neighbor classifier as the distant between converted numbers does not tell much about the relation between the features. Multiple target classes datasets are inconvenient for the bias-variance calculation, so we focus on 2 class target datasets, which there are plenty enough on Openml. 
 
 \subsubsection{Bias-variance datasets}
 An important part of a dataset to be viable for bias variance analysis is it having 2 classes as target. This is due to calculation we use to find the bias and variance error. The bias and variance error is in this way like recall or precision error more suitable for a 2 classes target.  %give picture of instance versus features
@@ -472,6 +473,28 @@ Meta features like mean mutual information or entropy for categorical features a
 	\end{subfigure}
 	\caption{Mutual information difference between measure}\label{fig:MMIs}
 \end{figure}
+
+\paragraph{replication of previous work}
+In figure \ref{paper-thesis} the experiment setup of Hilario and the experiment setup of this thesis are shown\cite{Resil-1}. Hilario shows that with the added random features the mutual information decreases an indicator that the added features could not improve the accuracy. In the experiment of this thesis the added features also show a decrease in mutual information but the mean mutual information scale is 10 times smaller. This indicates that the datasets used are less valuable in contrast to the ones used by Hilario. Comparing any results is harder as the versions of the classifiers have been changed over time.
+
+
+\begin{figure}[H]
+	\centering
+	\begin{subfigure}[b]{0.45\textwidth}
+		\includegraphics[width=\textwidth]{images/MutualInformationDecay.png}
+		\caption{adjusted Mean Mutual Information for added random features.}
+		\label{fig:AMMIdecay}
+	\end{subfigure}
+	\begin{subfigure}[b]{0.45\textwidth}
+		\includegraphics[width=\textwidth]{images/MutualInformationDecay-paper.png}
+		\caption{average Mutual Information as a measure of relevance}
+		\label{fig:AMMIpaper}
+	\end{subfigure}
+	\caption{Mutual information decline between previous work and this work}\label{fig:AMMIs}
+	\label{paper-thesis}
+\end{figure}
+
+
 
 \subsubsection{Feature Importance}\label{chapter312}
 Feature importance calculated with a RandomForestClassifer gives an indication what features are important for the decision trees. In figures \ref{fig:FIC} and \ref{fig:FIN}, the feature importance of the added random features are shown. This makes it clear that RandomForestClassifier does not recognize these features as unimportant. A difference in the perceived importance of random categorical and numerical features. Even more so the distribution of random categorical features. The slope of random categorical with k=3, features importance is also steeper as it more than doubles and for numerical features it only nearly doubles. This is however not true for random categorical features with k= 100 which has an equal absolute increase but starts higher. This can be explained as more perceived variance in k=100 which might indicate better probability of differentiating between the target classes. The lack of increase can be attributed to the cap on the importance at 100$\%$. The original features might give some better results in predicting but the added features still consists of some percentage of the total number of features. Random Forest Classifier has a limit on the number of features considered for each split which is capped at a percentage of the total set. This is partly the reason that these random features can be considered as important in the split together with their variance. The variance gives perceived information as you look at a subset of instances the high variability shows that for some target class this feature value is this number and for the other classes the odds of different values for that feature is high. 
@@ -977,25 +1000,7 @@ Instead of measuring the influence of standard deviation, we tried to add standa
 
 
 
-\subsection{replication of previous work}
 
-\begin{figure}[H]
-	\centering
-	\begin{subfigure}[b]{0.45\textwidth}
-		\includegraphics[width=\textwidth]{images/MutualInformationDecay.png}
-		\caption{adjusted Mean Mutual Information for added random features.}
-		\label{fig:AMMIdecay}
-	\end{subfigure}
-	\begin{subfigure}[b]{0.45\textwidth}
-		\includegraphics[width=\textwidth]{images/MutualInformationDecay-paper.png}
-		\caption{average Mutual Information as a measure of relevance}
-		\label{fig:AMMIpaper}
-	\end{subfigure}
-	\caption{Mutual information decline between previous work and this work}\label{fig:AMMIs}
-	\label{paper-thesis}
-\end{figure}
-
-In figure \ref{paper-thesis} the experiment setup of Hilario and the experiment setup of this thesis are shown\cite{Resil-1}. For Hilario it was to show that with the added random features the mutual information decreases an indicator that the added features could not improve the accuracy. In the experiment of this thesis the added features also show a decrease in mutual information but the mean mutual information scale is 10 times smaller. This indicates that the datasets used are less valuable in contrast to the ones used by Hilario. The change of x-scale compared to previous experiments is to able to compare it more to the work of Hilario. Comparing the results is harder as the versions of the classifiers have been changed over time.
 
 
  \subsection{Conclusion}
@@ -1046,7 +1051,7 @@ A partly solution for the previous mentioned problem of datasets is the splittin
 
 
 
-
+\newpage
 \section{References}
 \begingroup
 \begin{thebibliography}{9}
@@ -1071,7 +1076,6 @@ Proceedings of the 4th European Conference on Principles of data mining and know
 \bibitem{SGDClass} Solving Large Scale Linear Prediction problems using stochastic gradient descent algorithms, T. Zhang, ICML Proceedings of the 21 International conference on machine learning (2004)
 \bibitem{GradientBoost} Stochastic Gradient Boosting, J. H. Friedman,  Computational Statistics \& Data analysis – Nonlinear methods and data mining volume 38 issue 4 pages 367-378,(2002)
 \bibitem{Greedy-GBC} Greedy function approximation: A gradient boosting machine, J. H. Friedman, The annals of statistics volume 29 issue 5, pages 1189-1232,(2001)
-Previous bias-variance research has shown a trend of larger dataset increasing the bias component but still fluctuating with  less than 10000 instances.
 \bibitem{Bias-var} Experiment databases, J. Vanschoren, H. Blockeel, B. Pfahringer, G. Holmes, Machine Learning Volume 82 issue 2 pages 127-158, (2012)
 \bibitem{BiasCalc} Bias plus variance decomposition for zero-one loss functions,R. Kohavi, D. Wolpert, Proceedings of the international conference on machine learning pages 275-283,(1996)
 \bibitem{RevClass} Supervised Machine Learning: A review of classification techniques, S.B. Kotsiantis, Informatica 31, (2007)
@@ -1082,10 +1086,11 @@ Previous bias-variance research has shown a trend of larger dataset increasing t
 \bibitem{SVM-sym} A practical guide to support vector classification, Chih-wei Hsu, Chich-Chung Chang, Chich-Jen Lin, 101. 1396-1400, (2003)
 \bibitem{Cross} A study of cross-validation and bootstrap for accuracy estimation and model selection, R. Kohavi, (1995)
 \bibitem{KNN} Nearest neighbor pattern classification, T. Coverm P. Hart, IEEE Transaction on Information Theory 13:21-27,(1967)
-\bibitem{scikit-learn} Choosing the right estimator, l,Scikit-learn, Retrieved from http://scikit-learn.org/stable/tutorial/machine$\_$learning$\_$map/index.htm 28 may 2018.
+\bibitem{scikit-learn} Choosing the right estimator, l,Scikit-learn, Retrieved from http://scikit-learn.org/stable/tutorial/machine$\_$learning$\_$map/index.htm on 28th March 2018.
 \bibitem{Noise} Instance-based learning algorithms, Aha, David W., D. Kibler, Marc K., Machine learning 6:1 pages 37-66
 \bibitem{Red-Bias} On the optimality of the simple Bayesian classifier under zero-one loss,P. Domingos, M. Pazzani, Machine learning 29 2-3 pages 103-130, (1997)
 \bibitem{redundant} A review and emperical evalutions of feature weighting methods for a class of lazy learning algorithms, Wettschereck, D. Aha, T. Mohri, Artificial Inteligence Review 11(1-5) pages 273-314, (1997)
+\bibitem{hyperpara} An emperical study of hyperparameter importance across datasets, Jan van Rijn, Frank Hutter, Proc. of AutoML (2017): 97-104.
 
 
 
@@ -1109,7 +1114,7 @@ figure \ref{fig:predAddCat} - 20, 21, 26, 333, 334, 335, 40668, 4135, 4534, 469,
 figure \ref{fig:Rem} - 1038, 1043, 22, 1176, 1049, 1050, 1063, 1067, 1068 \\
 figure \ref{fig:Inst} - 6, 1036, 12, 1038, 14, 16, 18, 1043, 20, 21, 1046, 22, 23, 1049, 1050, 26, 28, 30, 32, 1570, 36, 4134, 4135, 1067, 1068, 44, 46, 40499, 60, 1120, 151, 1176, 182, 184, 40645, 40646, 40647, 40648, 40649, 40650, 40651, 40652, 40653, 40654, 40655, 40656, 40664, 40668, 40670, 40677, 40678, 40680, 40687, 40695, 40696, 40697, 40702, 40706, 300, 179000, 312, 375, 1459, 1461, 1462, 4534, 953, 1466, 4538, 1468, 959, 1475, 1476, 1478, 1479, 1485, 1486, 1487, 1489, 1491, 1492, 1493, 1494, 1497, 1501, 991, 1504, 1505, 1022 \\
 figures \ref{fig:BiasAcc},\ref{fig:BiasScaling} - 1025, 1067, 1036, 1068, 1038, 1043, 1014, 1049, 1050, 1022 \\ 
-figures \ref{Overfit} - 11, 12, 37, 54, 458, 1038, 1043
+figures \ref{fig:Overfit} - 11, 12, 37, 54, 458, 1038, 1043
 \subsubsection{Values}
 The number of features and instances for datasets
 \begin{figure}[h] 
@@ -1123,6 +1128,8 @@ The number of features and instances for datasets
 
 
 \subsection{Different approach}
+In figure \ref{fig:Overfit} classifiers are optimized on their hyperparameters, based on the work of van Rijn and Hutter \cite{hyperpara}. The classifiers SVC-rbf, Adaboost and RandomForestClassifier were analyzed to find the most important hyperparameters to optimize on. In the work of Islam the importance k parameter in a kNN classifier is mentioned and so this value is tuned to increase accuracy\cite{KNN-k}. 
+
 \begin{figure}[h] 
 	\centering
 	\includegraphics[
@@ -1147,7 +1154,7 @@ The number of features and instances for datasets
 	width=0.65\textwidth
 	]{images/appendix/Overfit.png}
 	\caption{predictive accuracy against numerical datasets with std difference, hyperparameter optimization(dotted line), default settings(straight line) }
-	\label{fig:predFlat}
+	\label{fig:Overfit}
 \end{figure}
 \newpage
 \subsection{Duration variance}
@@ -1157,7 +1164,7 @@ In this section duration examples are shown which show behaviour that should not
 	\includegraphics[
 	width=0.65\textwidth
 	]{images/appendix/DurAddOld.png}
-	\caption{Duration of the oldest version of adding random features}
+	\caption{Duration of the oldest version of adding random(dotted) or duplicate features(default)}
 	\label{fig:durOld}
 \end{figure}
 
@@ -1175,7 +1182,7 @@ In this section duration examples are shown which show behaviour that should not
 	\includegraphics[
 	width=0.65\textwidth
 	]{images/appendix/FailDurAddNew.png}
-	\caption{Duration of the newest version of adding random features}
+	\caption{Duration of the newest version of adding random  or redundant features}
 	\label{fig:durNewest}
 \end{figure}
 
